[project]
name = "ServerMonPy"
version = "0.0.1"
authors = [
  { name="SANJAY", email="rubikproxy@gmail.com" },
]
description = "Real-time server monitoring tool using SSH"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rubikproxy/ServerMonPy"
"Bug Tracker" = "https://github.com/rubikproxy/ServerMonPy/issues"